<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background_1"
    tools:context=".login.Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#852E0505"
            android:outlineAmbientShadowColor="#FFFFFF"
            android:outlineSpotShadowColor="#FFFFFF"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="-58dp">

            <EditText
                android:id="@+id/etMail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@id/btLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etMail"
                android:autofillHints="" />

            <Button
                android:id="@+id/btLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="#DD3A0808"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/cbPersist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />

            <CheckBox
                android:id="@+id/cbPersist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="125dp"
                android:layout_marginEnd="125dp"
                android:text="@string/make_persist"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>